# linux_activity_manager

./: CMakeLists.txt  ProcessContainer.h  ProcessParser.h  SysInfo.h  constants.h  main.cpp  util.h
src/: Process.cpp  Process.h  ProcessContainer.cpp  ProcessContainer.h  ProcessParser.cpp  ProcessParser.h  SysInfo.cpp  SysInfo.h  Util.cpp  Util.h  constants.h  util.cpp
